# dappmesh

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  env.rs  main.rs  setup.rs  shell_env.rs  validation.rs
