[package]
name = "dapp-cli"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.8" , features = ["derive"]}
colored = "2.1.0"
dapp-platform = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
kube-derive = { workspace = true }
lazy_static = "1.5.0"
maplit = "1.0.2"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { version = "0.26.3", features = ["strum_macros"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum_macros = "0.26.4"

[dev-dependencies]
anyhow = { workspace = true }
assert-json-diff = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
tower-test = { workspace = true }
uuid = { workspace = true }
assert_cmd = "2.0.14"
predicates = "3.1.0"

[build-dependencies]
semver = { workspace = true }
